--- a/templates/base.html
+++ b/templates/base.html
@@ -78,6 +78,7 @@
                         <li><a class="white-text" href="http://www.codelovers.cn/" target="_blank">编程爱好者之家</a></li>
                         <li><a class="white-text" href="http://www.tcode.me/" target="_blank">淘代码-专注JS特效</a></li>
                         <li><a class="white-text" href="http://dongnengyu.com/" target="_blank">董能宇的博客</a></li>
+                        <li><a class="white-text" href="https://blog.zhlzzz.com/" target="_blank">ZHL的博客</a></li>
                     </ul>
                 </div>
             </div>
