* modify: 修改了handle403、404、500页面

--- a/templates/500.html
+++ b/templates/500.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>500错误--Kindem的博客</title>
+    <title>错误--Kindem的博客</title>
 </head>
 <body>
-    <h1>500 错误！请返回主站：<a href="http://www.kindemh.cn/">Kindem的博客</a></h1>
+    <h1>错误！请返回主站：<a href="http://www.kindemh.cn/">Kindem的博客</a></h1>
 </body>
 </html>
