--- a/templates/404.html
+++ b/templates/404.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>404错误-Kindem的博客</title>
+    <title>错误-Kindem的博客</title>
 </head>
 <body>
-    <h1>404 错误！请返回主站：<a href="http://www.kindemh.cn/">Kindem的博客</a></h1>
+    <h1>错误！请返回主站：<a href="http://www.kindemh.cn/">Kindem的博客</a></h1>
 </body>
 </html>
