--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,19 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 m6 l4 xl4">
+                    <h4>友情链接</h4>
+                    <ul>
+                        <li><a class="white-text" href="http://chestnut-phoenix.xyz/" target="_blank">栗子木凤凰芯</a></li>
+                        <li><a class="white-text" href="http://www.architecy.com/" target="_blank">网站架构-架构师记录点滴</a></li>
+                        <li><a class="white-text" href="http://www.tigerbook.cn/" target="_blank">虎书博客</a></li>
+                        <li><a class="white-text" href="http://www.codelovers.cn/" target="_blank">编程爱好者之家</a></li>
+                        <li><a class="white-text" href="http://www.tcode.me/" target="_blank">淘代码-专注JS特效</a></li>
+                        <li><a class="white-text" href="http://dongnengyu.com/" target="_blank">董能宇的博客</a></li>
+                        <li><a class="white-text" href="https://blog.zhlzzz.com/" target="_blank">ZHL的博客</a></li>
+                        <li><a class="white-text" href="http://www.ermsg.com/" target="_blank">错误纸标</a></li>
+                    </ul>
+                </div>
+                <div class="col s12 m6 l4 xl4">
                     <h4>联系方式</h4>
                     <p>QQ: 461425614<br>
                         邮箱: <a href="mailto:461425614@qq.com" class="white-text">461425614@qq.com</a><br>
@@ -67,18 +80,6 @@
                         <li><a href="https://github.com/FlyAndNotDown" class="white-text">GitHub&nbsp;-&nbsp;FlyAndNotDown</a></li>
                         <li><a href="https://www.zhihu.com/people/kindem/activities" class="white-text">知乎&nbsp;-&nbsp;亡与栀枯</a></li>
                         <li><a href="https://www.jianshu.com/users/d498ebae7b21/timeline" class="white-text">简书 - Kindem</a></li>
-                    </ul>
-                </div>
-                <div class="col s12 m6 l4 xl4">
-                    <h4>友情链接</h4>
-                    <ul>
-                        <li><a class="white-text" href="http://chestnut-phoenix.xyz/" target="_blank">栗子木凤凰芯</a></li>
-                        <li><a class="white-text" href="http://www.architecy.com/" target="_blank">网站架构-架构师记录点滴</a></li>
-                        <li><a class="white-text" href="http://www.tigerbook.cn/" target="_blank">虎书博客</a></li>
-                        <li><a class="white-text" href="http://www.codelovers.cn/" target="_blank">编程爱好者之家</a></li>
-                        <li><a class="white-text" href="http://www.tcode.me/" target="_blank">淘代码-专注JS特效</a></li>
-                        <li><a class="white-text" href="http://dongnengyu.com/" target="_blank">董能宇的博客</a></li>
-                        <li><a class="white-text" href="https://blog.zhlzzz.com/" target="_blank">ZHL的博客</a></li>
                     </ul>
                 </div>
             </div>
