* add: 添加一个友链

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,6 +63,7 @@
                         <li><a class="white-text" href="http://dongnengyu.com/" target="_blank">董能宇的博客</a></li>
                         <li><a class="white-text" href="https://blog.zhlzzz.com/" target="_blank">ZHL的博客</a></li>
                         <li><a class="white-text" href="http://www.ermsg.com/" target="_blank">错误纸标</a></li>
+                        <li><a class="white-text" href="http://www.ifx666.cn/" target="_blank">爱分享666</a></li>
                     </ul>
                 </div>
                 <div class="col s12 m6 l4 xl4">
