--- a/templates/base.html
+++ b/templates/base.html
@@ -69,8 +69,8 @@
                 <div class="col s12 m6 l4 xl4">
                     <h4>联系方式</h4>
                     <p>
-                        邮箱: <a href="mailto:461425614@qq.com" class="white-text">461425614@qq.com</a><br>
-                        <a class="white-text" href="mailto:461425614@qq.com">交换友链</a>
+                        邮箱: <a href="mailto:hwq2525775@gmail.com" class="white-text">461425614@qq.com</a><br>
+                        <a class="white-text" href="mailto:hwq2525775@gmail.com">交换友链</a>
                     </p>
                     <br>
                 </div>
