--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
                 <div class="col s12 m6 l4 xl4">
                     <h4>联系方式</h4>
                     <p>
-                        邮箱: <a href="mailto:hwq2525775@gmail.com" class="white-text">461425614@qq.com</a><br>
+                        邮箱: <a href="mailto:hwq2525775@gmail.com" class="white-text">hwq2525775@gmail.com</a><br>
                         <a class="white-text" href="mailto:hwq2525775@gmail.com">交换友链</a>
                     </p>
                     <br>
