[del] 删除一个多余图标 [add] 添加新的站长链接

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,17 +36,17 @@
     {% block main %}
     {% endblock %}
 
-    <!--Action Button-->
-    <div class="fixed-action-btn">
-        <a class="btn-floating btn-large red">
-            <i class="material-icons">add</i>
-        </a>
-        <ul>
-            <li><a class="btn-floating green disabled"><i class="material-icons">share</i></a></li>
-            <li><a class="btn-floating yellow darken-1 disabled"><i class="material-icons">mail</i></a></li>
-            <li><a class="btn-floating blue disabled"><i class="material-icons">bug_report</i></a></li>
-        </ul>
-    </div>
+    <!--&lt;!&ndash;Action Button&ndash;&gt;-->
+    <!--<div class="fixed-action-btn">-->
+        <!--<a class="btn-floating btn-large red">-->
+            <!--<i class="material-icons">add</i>-->
+        <!--</a>-->
+        <!--<ul>-->
+            <!--<li><a class="btn-floating green disabled"><i class="material-icons">share</i></a></li>-->
+            <!--<li><a class="btn-floating yellow darken-1 disabled"><i class="material-icons">mail</i></a></li>-->
+            <!--<li><a class="btn-floating blue disabled"><i class="material-icons">bug_report</i></a></li>-->
+        <!--</ul>-->
+    <!--</div>-->
 
     <!--页脚-->
     <footer class="page-footer cyan">
@@ -67,21 +67,24 @@
                     </ul>
                 </div>
                 <div class="col s12 m6 l4 xl4">
+                    <h4>站长链接</h4>
+                    <ul>
+                        <li><a href="/rss" class="white-text" target="_blank">RSS订阅(在你的RSS阅读器中添加链接)</a></li>
+                        <li><a href="https://github.com/FlyAndNotDown" class="white-text" target="_blank">GitHub&nbsp;-&nbsp;FlyAndNotDown</a></li>
+                        <li><a href="https://www.zhihu.com/people/kindem/activities" class="white-text" target="_blank">知乎&nbsp;-&nbsp;亡与栀枯</a></li>
+                        <li><a href="https://www.jianshu.com/users/d498ebae7b21/timeline" class="white-text" target="_blank">简书 - Kindem</a></li>
+                        <li><a href="https://segmentfault.com/u/liuweimeng" class="white-text" target="_blank">SegmentFault - 流渚微梦</a></li>
+                        <li><a href="https://juejin.im/user/5b3a3d53f265da62d21e14fe" class="white-text" target="_blank">掘金 - FlyAndNotDown</a></li>
+                        <li><a href="https://leetcode-cn.com/flyandnotdown/" class="white-text" target="_blank">LeetCode - FlyAndNotDown</a></li>
+                    </ul>
+                </div>
+                <div class="col s12 m6 l4 xl4">
                     <h4>联系方式</h4>
                     <p>
                         邮箱: <a href="mailto:hwq2525775@gmail.com" class="white-text">hwq2525775@gmail.com</a><br>
                         <a class="white-text" href="mailto:hwq2525775@gmail.com">交换友链</a>
                     </p>
                     <br>
-                </div>
-                <div class="col s12 m6 l4 xl4">
-                    <h4>站长链接</h4>
-                    <ul>
-                        <li><a href="/rss" class="white-text">RSS订阅(复制该链接到你的RSS阅读器中)</a></li>
-                        <li><a href="https://github.com/FlyAndNotDown" class="white-text">GitHub&nbsp;-&nbsp;FlyAndNotDown</a></li>
-                        <li><a href="https://www.zhihu.com/people/kindem/activities" class="white-text">知乎&nbsp;-&nbsp;亡与栀枯</a></li>
-                        <li><a href="https://www.jianshu.com/users/d498ebae7b21/timeline" class="white-text">简书 - Kindem</a></li>
-                    </ul>
                 </div>
             </div>
         </div>
