--- a/templates/main/archive.html
+++ b/templates/main/archive.html
@@ -10,7 +10,7 @@
         <div class="nav-wrapper container">
             <a href="http://www.kindemh.cn" class="brand-logo">Kindem</a>
             <ul class="right">
-                <li><a href="#"><i class="material-icons">search</i></a></li>
+                <!--<li><a href="#"><i class="material-icons">search</i></a></li>-->
                 <li class="hide-on-med-and-down"><a href="http://www.kindemh.cn/message"><i class="material-icons">person</i></a></li>
             </ul>
             <ul class="left hide-on-large-only">
